2015-10-13  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (epiphany_fadd64): Added placeholder function.
	(epiphany_fmul64): Likewise.
	(epiphany_fsub64): Likewise.
	(epiphany_fmadd64): Likewise.
	(epiphany_fmsub64): Likewise.
	(epiphany_fix64): Likewise.
	(epiphany_float64): Likewise.
	(epiphany_fabs64): Likewise.
	(epiphany_fmax64): Likewise.
	(get_epiphany_fzeroflag64): Likewise.
	(get_epiphany_fnegativeflag64): Likewise.
	(get_epiphany_funderflowflag64): Likewise.
	(get_epiphany_foverflowflag64): Likewise.
	(get_epiphany_finvalidflag64): Likewise.
	* sim/epiphany/epiphany-fp.h: Add prototypes for above
	functions.

2015-10-12  Ola Jeppsson  <ola@adapteva.com>

	* cgen-atomic.h: Fix signedness warnings.
	* epiphany-fp.c (float_as_int): Likewise.
	(int_as_float): Likewise.
	(fcal): Likewise.
	(epiphany_fabs): Likewise.
	* epiphany-fp.h: Likewise.
	* epiphany-sim.h: Likewise.
	* epiphany.c (epiphanybf_set_status): Likewise.
	(epiphanybf_set_debugcmd): Likewise.
	(epiphanybf_set_resetcore): Likewise.
	(epiphany_gie): Likewise.
	(SI epiphany_testset): Likewise.
	* oob-events.c (interrupt_handler): Likewise.
	* traps.c (SI epiphany_rti): Likewise.
	* sim-if.c (sim_open): Fix old style function prototype
	warnings.
	(sim_close): Likewise.
	(sim_create_inferior): Likewise.
	* esim/esim.c (es_set_cpu_state): Fix function type prototype
	warning.
	* esim/esim.h: Likewise.

2015-10-08  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (fcal): Handle FMAX_FP_OP.
	(epiphany_fmax): New function.
	* epiphany-fp.h: Add prototype for epiphany_fmax().

2015-10-08  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (epiphany_fix): Adjust arguments.
	(epiphany_float): Likewise.
	(epiphany_fabs): Likewise.
	* epiphany-fp.h: Adjust above function
	prototypes.

2015-09-29  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (epiphany_frecip): Removed.
	(epiphany_fsqrt): Removed.
	* epiphany-fp.h: Removed function prototypes.

2015-09-25  Ola Jeppsson  <ola@adapteva.com>
